--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creative CV</title>
+    <title>Curriculum</title>
     <meta name="description" content="Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -60,13 +60,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Fernando Navarro Martin . Diseñador Web, Programador y Administrador de sistemas.</p>
-            <p>Esto es un Curriculum de profesionales. 
+            <div class="h4 mt-0 title">Mi Información</div>
+            <p>Fernando Navarro Martin . Diseñador Web, Programador y Administrador de sistemas.</p
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Basic Information</div>
+            <div class="h4 mt-0 title">Informacion Basica</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Años:</strong></div>
               <div class="col-sm-8">21</div>
@@ -80,11 +79,11 @@
               <div class="col-sm-8">Suerte que te lo doy </div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Dirrecion:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Dirección:</strong></div>
               <div class="col-sm-8">Palleja</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Idiomas:</strong></div>
               <div class="col-sm-8">Español y Catalan </div>
             </div>
           </div>
@@ -93,9 +92,9 @@
     </div>
   </div>
 </div>
-<div class="section" id="skill">
+<div class="section" id="Habilidades">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Professional Skills</div>
+    <div class="h4 text-center mb-4 title">Habilidades Profesionales</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -491,12 +490,12 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">140, City Center, New York, U.S.A</p>
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+1718-111-0011</p>
-                    <p class="mb-0"><strong>Email</strong></p>
-                    <p>anthony@company.com</p>
+                    <p class="mb-0"><strong>Dirección</strong></p>
+                    <p class="pb-2">Palleja</p>
+                    <p class="mb-0"><strong>Telefono</strong></p>
+                    <p class="pb-2">+34</p>
+                    <p class="mb-0"><strong>Correo</strong></p>
+                    <p>gaabriiel.martin@gmail.com</p>
                   </div>
                 </div>
               </div>
@@ -510,7 +509,7 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">Anthony Barnett</div>
+      <div class="h4 title text-center">Fernando Navarro Martin</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
       </div>
