--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Informacion</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Habilidades</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Galeria</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experiencia laboral</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contacto</a></li>
               </ul>
             </div>
           </div>
