--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                   <figure class="cc-effect"><img src="images/graphic-design-1.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Triangle Pattern</div>
-                      <p>Graphic Design</p>
+                      <p>Diseñador Grafico</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
