--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="Imagen(Curriculum)/.jpg" alt="Image"/></a></div>
           <div class="h2 title">Fernando Navarro Martin</div>
-          <p class="category text-white">Diseñador Web, Programador y Administrador de sistemas</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Diseñador Web, Programador y Administrador de sistemas</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contacta Conmigo</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descargar CV</a>
         </div>
       </div>
       <div class="section">
